<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MacroCount</string>
    <string name="button_addItem">Add MacroCount</string>

    <string name="hint_macroCountTitle">MacroCount Title</string>
    <string name="hint_macroCountDescription">MacroCount Description</string>
    <string name="hint_macroCountCalories">Calories:</string>
    <string name="hint_macroCountProtein">Protein:</string>
    <string name="hint_macroCountCarbs">Carbs:</string>
    <string name="hint_macroCountFat">Fat:</string>
    <string name="hint_userName">User name</string>
    <string name="hint_loginEmail">Enter your email</string>
    <string name="hint_loginPassword">Enter your password</string>


    <string name="macrosNotFound">No MacroCounts Yet…\nGo add a MacroCount!</string>
    <string name="macroAddError">Error : Couldn\'t add macro…</string>

    <string name="radio_text_gain">Gain</string>
    <string name="radio_text_lose">Lose</string>

    <string name="snackbar_macroCountTitle">Please Enter a title</string>
    <string name="snackbar_macroCountCalories">Please Enter a number for your calories</string>
    <string name="snackbar_macroCountCarbs">Please Enter a number for your carbs</string>
    <string name="snackbar_macroCountProtein">Please Enter a number for your protein</string>
    <string name="snackbar_macroCountFat">Please Enter a number for your fat</string>
    <string name="snackbar_userEmail">Please enter an email address</string>
    <string name="snackbar_userPassword">Please enter a password</string>
    <string name="snackbar_invalidLogin">Email or password incorrect</string>

    <string name="menu_signout">Sign out</string>
    <string name="menu_addMacroCount">Add</string>
    <string name="menu_cancelMacroCount">Cancel</string>
    <string name="save_macroCount">Save</string>
    <string name="button_deleteItem">Delete</string>
    <string name="button_editItem">Edit</string>

    <string name="card_calories">Calories</string>
    <string name="card_protein">Protein</string>
    <string name="card_carbs">Carbs</string>
    <string name="card_fat">Fat</string>

    <string name="text_kg">kg</string>
    <string name="text_cm">cm</string>
    <string name="text_dob">DOB</string>
    <string name="text_age">Age</string>
    <string name="text_height">Height</string>
    <string name="text_weight">Weight</string>
    <string name="text_gender">Gender</string>
    <string name="text_genderM">Male</string>
    <string name="text_genderF">Female</string>
    <string name="title_userProfile">User profile</string>
    <string name="btn_save_user">Save</string>
    <string name="btn_saved_user">Saved</string>

    <string name="button_addImage">Add Image</string>
    <string name="button_takePhoto">Take Photo</string>
    <string name="button_login">Log in</string>
    <string name="button_signup">Sign up</string>

    <string name="login_link">Log in</string>
    <string name="signup_link">Sign up</string>

    <string name="auth_failed">Authentication failed</string>

    <string name="select_macrocount_image">Select image</string>


    <string name="action_macro_list">MacroCounts</string>
    <string name="action_macro_count">Add MacroCount</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">MacroCount</string>
    <string name="nav_header_subtitle">voteforhomer@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">MacroCount</string>
    <string name="aboutus_message">Use MacroCount to add your daily macros.\n\n Add photos \n\n View personalized analytics</string>

    <string name="action_analytics">Analytics</string>

    <string name="action_user">User</string>
    <string name="action_camera">Camera</string>
    <string name="action_macro_search">Search</string>
    <string name="action_edit_macro">Edit</string>
    <string name="action_edit_user">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_user_detail">User Details</string>
    <string name="menu_macro_detail">Macro Details</string>

    <string name="messageLoading">Please wait while the MacroCounts are Loading...</string>
    <string name="select_profile_image">Select Profile Image</string>

</resources>