<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    tools:ignore="MissingDefaultResource">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/action_macro_list" />

        <item
            android:id="@+id/macroCountFragment"
            android:icon="@drawable/ic_add"
            android:title="@string/action_macro_count" />

        <item android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/action_about" />

        <item android:id="@+id/analyticsFragment"
            android:icon="@drawable/ic_analytics"
            android:title="@string/action_analytics" />

        <item android:id="@+id/userDetailFragment"
            android:icon="@drawable/ic_profile_icon"
            android:title="@string/action_user" />

    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/menu_signout" />
        </menu>
    </item>
</menu>