<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="uservm"
        type="org.wit.macrocount.ui.edituser.EditUserViewModel" />
</data>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edituser.UserFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/text_padding"
                    android:autofillHints="hint"
                    android:hint="@string/hint_userName"
                    android:text="@={uservm.observableUser.name}"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="@dimen/text_padding"
                    style="@style/TextColour"
                    android:textSize="@dimen/edit_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/linear_layout_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Weight goal"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    style="@style/TextColour"
                    />

                <RadioGroup
                    android:id="@+id/goalRadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/goalRadioButtonOption1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_text_lose" />

                    <RadioButton
                        android:id="@+id/goalRadioButtonOption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_text_gain" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/linear_layout_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_gender"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding_medium"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    style="@style/TextColour"
                    />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonOption1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_genderM" />

                    <RadioButton
                        android:id="@+id/radioButtonOption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_genderF" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/linear_layout_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_age"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    style="@style/TextColour"
                    />

                <NumberPicker
                    android:id="@+id/numberPickerAge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_large"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="years"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding_large">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_height"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    style="@style/TextColour"
                    />

                <NumberPicker
                    android:id="@+id/numberPickerHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_large"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_cm"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    style="@style/TextColour"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding_large"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    style="@style/TextColour"
                    android:text="@string/text_weight"
                    android:textSize="@dimen/text_size_large" />

                <NumberPicker
                    android:id="@+id/numberPickerWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_kg"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    style="@style/TextColour"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/text_padding_large"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_dob"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/text_padding_medium"
                    android:paddingEnd="@dimen/text_padding"
                    android:paddingBottom="@dimen/text_padding"
                    android:paddingLeft="@dimen/text_padding_large"
                    android:textSize="@dimen/text_size_large"
                    style="@style/TextColour"
                    />

                <NumberPicker
                    android:id="@+id/numberPickerDay"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <NumberPicker
                    android:id="@+id/numberPickerMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <NumberPicker
                    android:id="@+id/numberPickerYear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_padding_large"
                android:background="@color/color_primary"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:stateListAnimator="@null"
                android:text="@string/btn_save_user"
                style="@style/AltTextColour"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>
</layout>