<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="macro"
            type="org.wit.macrocount.models.MacroCountModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:elevation="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/macroCounterTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_text_size"
                    android:layout_marginStart="@dimen/list_start_margin"
                    tools:text="A Title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/macroCountCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/list_start_margin"
                android:textSize="@dimen/text_size_large"
                tools:text="@string/card_calories"
                android:layout_marginLeft="@dimen/card_text_margin_s"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/macroCountProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_size_large"
                tools:text="@string/card_protein"
                android:layout_marginLeft="@dimen/card_text_margin_l"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/macroCountCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_size_large"
                tools:text="@string/card_carbs"
                android:layout_marginLeft="@dimen/card_text_margin_l"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/macroCountFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_size_large"
                tools:text="@string/card_fat"
                android:layout_marginLeft="@dimen/card_text_margin_l"
                android:textColor="@color/grey"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>