<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/splash_image"
                android:layout_width="51dp"
                android:layout_height="52dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/vector_scales_colour"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="156dp" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_loginEmail"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_loginPassword"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_button"
                android:stateListAnimator="@null"
                android:text="@string/button_login"
                 />

            <Button
                android:id="@+id/btnSignup"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_button"
                android:stateListAnimator="@null"
                android:text="@string/button_signup"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>